objects/ortoo_qra__User_Settings__c.object
<CustomObject>
    <description>It has different user settings like business hours, working hours, logout time etc.</description>
    <fields>
        <fullName>ortoo_qra__Default_Shift_x_Business_Hour_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to SF built in Business Hours object. Filled in if &quot;Use a Business Hours schedule&quot; is selected in the &quot;Default Shift Type&quot; picklist</description>
        <inlineHelpText>Lookup to SF built in Business Hours object. Filled in if &quot;Use a Business Hours schedule&quot; is selected in the &quot;Default Shift Type&quot; picklist</inlineHelpText>
        <label>Default Shift - Business Hour Id</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>QA_User_Settings_Default_Shift_x_BH_Id</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Default_Shift_x_Business_Hours_Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It stores whether user is available inside Business Hours Schedule or outside.</description>
        <inlineHelpText>It stores whether user is available inside Business Hours Schedule or outside.</inlineHelpText>
        <label>Reversed - Use hours only OUTSIDE BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Default_Shift_x_Calendar_Items_Type__c</fullName>
        <description>Which Calendar Entries are your shift?</description>
        <inlineHelpText>Which Calendar Entries are your shift?</inlineHelpText>
        <label>Which Calendar Entries are your shift?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Calendar items</fullName>
                </value>
                <value>
                    <fullName>Time OUTSIDE all calendar items</fullName>
                </value>
                <value>
                    <fullName>Just specific types of calendar Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Default_Shift_x_Type__c</fullName>
        <description>My Default Shift / Working Hours</description>
        <inlineHelpText>My Default Shift / Working Hours</inlineHelpText>
        <label>My Default Shift / Working Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>24/7</fullName>
                </value>
                <value>
                    <fullName>Use a Business Hours schedule</fullName>
                </value>
                <value>
                    <fullName>Use My Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__OOO_x_Calendar_Items_Type__c</fullName>
        <description>Which Calendar Entries are OOO / Unavailable?</description>
        <inlineHelpText>Which Calendar Entries are OOO / Unavailable?</inlineHelpText>
        <label>Which Calendar Entries are OOO?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Calendar items</fullName>
                </value>
                <value>
                    <fullName>Time OUTSIDE all calendar items</fullName>
                </value>
                <value>
                    <fullName>Just specific types of calendar Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__OOO_x_Source__c</fullName>
        <description>My OOO / non-working times</description>
        <inlineHelpText>My OOO / non-working times</inlineHelpText>
        <label>My OOO / non-working times</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Default (from Global Settings)</fullName>
                </value>
                <value>
                    <fullName>Use My Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__QA_Logout_Time__c</fullName>
        <label>QA Logout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__QA_Logout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__WO_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</description>
        <inlineHelpText>Select the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</inlineHelpText>
        <label>Business Hours (No Longer Used)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>QA User Settings (Business Hours)</relationshipLabel>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Working_Hours__c</fullName>
        <description>Stores the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</description>
        <inlineHelpText>Select the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</inlineHelpText>
        <label>Working Hours (No Longer Used)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/7</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA User Settings</label>
    <nameField>
        <label>User Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>